# MyMcPy

./: README.md  pyproject.toml
.github/workflows/: publish.yml
mymcpy/: __init__.py
