[project]
name = "MyMcPy"
version = "0.1.0"
description = "A simple Python library for interacting with the my-mc.link API."
authors = [{name = "ItsAsheer", email = "NullyIsHere@proton.me"}]
readme = "README.md"
license = {file = "LICENSE"}
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: GNU Affero General Public License v3",
    "Operating System :: OS Independent"
]
dependencies = [
    "requests"
]
requires-python = ">=3.7"
